--- a/blv/printer-mmu2s-length-sensors.cfg
+++ b/blv/printer-mmu2s-length-sensors.cfg
@@ -2,7 +2,88 @@
 [mcu sensorboard]
 serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_8095060110134753384C4E00-if00
 
+[filament_motion_sensor FMS_T0]
+detection_length: 10.0
+#   The minimum length of filament pulled through the sensor to trigger
+#   a state change on the switch_pin
+#   Default is 7 mm.
+extruder: extruder
+#   The name of the extruder section this sensor is associated with.
+#   This parameter must be provided.
+switch_pin: sensorboard:PA0
+#pause_on_runout:
+pause_on_runout: False
+runout_gcode:
+	M117 Runout Detected!
+	PAUSE_MMU
+#insert_gcode:
+#event_delay:
+#pause_delay:
+#   See the "filament_switch_sensor" section for a description of the
+#   above parameters.
+
 [filament_motion_sensor FMS_T1]
+detection_length: 10.0
+#   The minimum length of filament pulled through the sensor to trigger
+#   a state change on the switch_pin
+#   Default is 7 mm.
+extruder: extruder
+#   The name of the extruder section this sensor is associated with.
+#   This parameter must be provided.
+switch_pin: sensorboard:PA1
+#pause_on_runout:
+pause_on_runout: False
+runout_gcode:
+	M117 Runout Detected!
+	PAUSE_MMU
+#insert_gcode:
+#event_delay:
+#pause_delay:
+#   See the "filament_switch_sensor" section for a description of the
+#   above parameters.
+
+
+[filament_motion_sensor FMS_T2]
+detection_length: 10.0
+#   The minimum length of filament pulled through the sensor to trigger
+#   a state change on the switch_pin
+#   Default is 7 mm.
+extruder: extruder
+#   The name of the extruder section this sensor is associated with.
+#   This parameter must be provided.
+switch_pin: sensorboard:PA2
+#pause_on_runout:
+pause_on_runout: False
+runout_gcode:
+	M117 Runout Detected!
+	PAUSE_MMU
+#insert_gcode:
+#event_delay:
+#pause_delay:
+#   See the "filament_switch_sensor" section for a description of the
+#   above parameters.
+
+[filament_motion_sensor FMS_T3]
+detection_length: 10.0
+#   The minimum length of filament pulled through the sensor to trigger
+#   a state change on the switch_pin
+#   Default is 7 mm.
+extruder: extruder
+#   The name of the extruder section this sensor is associated with.
+#   This parameter must be provided.
+switch_pin: sensorboard:PA3
+#pause_on_runout:
+pause_on_runout: False
+runout_gcode:
+	M117 Runout Detected!
+	PAUSE_MMU
+#insert_gcode:
+#event_delay:
+#pause_delay:
+#   See the "filament_switch_sensor" section for a description of the
+#   above parameters.
+
+[filament_motion_sensor FMS_T4]
 detection_length: 10.0
 #   The minimum length of filament pulled through the sensor to trigger
 #   a state change on the switch_pin
@@ -12,32 +93,86 @@ extruder: extruder
 #   This parameter must be provided.
 switch_pin: sensorboard:PA4
 #pause_on_runout:
+pause_on_runout: False
 runout_gcode:
 	M117 Runout Detected!
+	PAUSE_MMU
 #insert_gcode:
 #event_delay:
 #pause_delay:
 #   See the "filament_switch_sensor" section for a description of the
 #   above parameters.
 
-[delayed_gcode DISABLEFILAMENTSENSOR] ; This will disable the FMS 1 second after klipper starts
+
+
+
+[delayed_gcode _DISABLE_FILAMENT_SENSOR] ; This will disable the FMS 1 second after klipper starts
 initial_duration: 1
 gcode:
-    SET_FILAMENT_SENSOR SENSOR=FMS_T1 ENABLE=0 ; Put your filament sensor's name after SENSOR=
+    SET_FILAMENT_SENSOR SENSOR=FMS_T0 ENABLE=0
+    SET_FILAMENT_SENSOR SENSOR=FMS_T1 ENABLE=0
+    SET_FILAMENT_SENSOR SENSOR=FMS_T2 ENABLE=0
+    SET_FILAMENT_SENSOR SENSOR=FMS_T3 ENABLE=0
+    SET_FILAMENT_SENSOR SENSOR=FMS_T4 ENABLE=0
 
-[gcode_macro FMS_ENABLE_T1] ; Add this to PRINT_START
+[gcode_macro FMS_ENABLE] ; Add this to PRINT_START
 description: Enable smart filament sensor
 gcode:
-    M117 ENABLING the Smart Filament Sensor
+    {% set EXTRUDER = params.EXTRUDER|default(0)|int %}
+    M118 ENABLING the Filament Sensor T{EXTRUDER}
     G92 E0
-    SET_FILAMENT_SENSOR SENSOR=FMS_T1 ENABLE=1 ; Put your filament sensor's name after SENSOR=
+    {% if EXTRUDER == 0 %}
+        {%if not printer["filament_motion_sensor FMS_T0"].filament_detected %}
+	    PAUSE_MMU
+        {% endif %}
+        SET_FILAMENT_SENSOR SENSOR=FMS_T0 ENABLE=1
+    {% endif %}
+    {% if EXTRUDER == 1 %}
+        {%if not printer["filament_motion_sensor FMS_T1"].filament_detected %}
+	    PAUSE_MMU
+        {% endif %}
+        SET_FILAMENT_SENSOR SENSOR=FMS_T1 ENABLE=1
+    {% endif %}
+    {% if EXTRUDER == 2 %}
+        {%if not printer["filament_motion_sensor FMS_T2"].filament_detected %}
+	    PAUSE_MMU
+        {% endif %}
+       SET_FILAMENT_SENSOR SENSOR=FMS_T2 ENABLE=1
+    {% endif %}
+    {% if EXTRUDER == 3 %}
+        {%if not printer["filament_motion_sensor FMS_T3"].filament_detected %}
+	    PAUSE_MMU
+        {% endif %}
+      SET_FILAMENT_SENSOR SENSOR=FMS_T3 ENABLE=1
+    {% endif %}
+    {% if EXTRUDER == 4 %}
+        {%if not printer["filament_motion_sensor FMS_T4"].filament_detected %}
+	    PAUSE_MMU
+        {% endif %}
+        SET_FILAMENT_SENSOR SENSOR=FMS_T4 ENABLE=1
+    {% endif %}
 
-[gcode_macro FMS_DISABLE_T1] ; Add this to PRINT_END and PRINT_CANCEL
+[gcode_macro FMS_DISABLE] ; Add this to PRINT_END and PRINT_CANCEL
 description: Disable smart filament sensor 
 gcode:
-    M117 DISABLING the Smart Filament Sensor
+    {% set EXTRUDER = params.EXTRUDER|default(0)|int %}
+    M118 DISABLING the Filament Sensor T{EXTRUDER}
     G92 E0
-    SET_FILAMENT_SENSOR SENSOR=FMS_T1 ENABLE=0 ; Put your filament sensor's name after SENSOR=
+    {% if EXTRUDER == 0 %}
+        SET_FILAMENT_SENSOR SENSOR=FMS_T0 ENABLE=0
+    {% endif %}
+    {% if EXTRUDER == 1 %}
+        SET_FILAMENT_SENSOR SENSOR=FMS_T1 ENABLE=0
+    {% endif %}
+    {% if EXTRUDER == 2 %}
+        SET_FILAMENT_SENSOR SENSOR=FMS_T2 ENABLE=0
+    {% endif %}
+    {% if EXTRUDER == 3 %}
+        SET_FILAMENT_SENSOR SENSOR=FMS_T3 ENABLE=0
+    {% endif %}
+    {% if EXTRUDER == 4 %}
+        SET_FILAMENT_SENSOR SENSOR=FMS_T4 ENABLE=0
+    {% endif %}
 
 #[gcode_button my_gcode_button]
 #pin: sensorboard:PA4
