--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -187,6 +187,7 @@ gcode:
 	RESPOND MSG="Print is already paused"
   {% else %}
 	RESPOND MSG="START PAUSE"
+        RESPOND PREFIX=tgnotify MSG="Printer is paused, check MMU"
 	SET_GCODE_VARIABLE MACRO=PAUSE_MMU VARIABLE=extruder_temp VALUE={printer.extruder.temperature}
 	SET_GCODE_VARIABLE MACRO=PAUSE_MMU VARIABLE=is_paused VALUE=1
 	SAVE_GCODE_STATE NAME=PAUSE_MMU_state
@@ -486,9 +487,7 @@ gcode:
 		{% endif %}
 		G92 E0
 		{% if printer["gcode_macro _VAR_MMU2S"].enable_motion_sensor %}
-		{% if printer["gcode_macro SELECT_TOOL"].color_selected|int == 1 %}
-			FMS_ENABLE_T1
-		{% endif %}
+			FMS_ENABLE EXTRUDER={printer["gcode_macro SELECT_TOOL"].color_selected|int}
 		{% endif %}
 		{% if printer["gcode_macro _VAR_MMU2S"].enable_purge_servo %}
 				_MOVE_PURGE_FILAMENT purge_length={purge_length}
@@ -496,9 +495,8 @@ gcode:
 				G1 E{purge_length} F{printer["gcode_macro _VAR_MMU2S"].purge_speed}
 		{% endif %}
 		{% if printer["gcode_macro _VAR_MMU2S"].enable_motion_sensor %}
-		{% if printer["gcode_macro SELECT_TOOL"].color_selected|int == 1 %}
-			FMS_DISABLE_T1
-		{% endif %}
+			M400
+			FMS_DISABLE EXTRUDER={printer["gcode_macro SELECT_TOOL"].color_selected|int}
 		{% endif %}
 		G92 E0
 		G1 E-{printer["gcode_macro _VAR_MMU2S"].purge_retract_at_end} F{printer["gcode_macro _VAR_MMU2S"].purge_speed}
