--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -150,7 +150,7 @@ gcode:
 # park the idler, stop the delayed stop of the heater
 [gcode_macro MMU_UNLOCK]
 gcode:
-	RESPOND MSG="Resume print: remove PAUSE and enable heater"
+	RESPOND MSG="MMU_UNLOCK: Homing mmu idler"
 	SET_GCODE_VARIABLE MACRO=PAUSE_MMU VARIABLE=is_paused VALUE=0
 	UPDATE_DELAYED_GCODE ID=DISABLE_HEATER DURATION=0
 	_HOME_IDLER
@@ -186,7 +186,8 @@ gcode:
   {% if printer.pause_resume.is_paused %}
 	RESPOND MSG="Print is already paused"
   {% else %}
-	RESPOND MSG="START PAUSE"
+	G90
+	RESPOND MSG="START PAUSE MMU"
         RESPOND PREFIX=tgnotify MSG="Printer is paused, check MMU"
 	SET_GCODE_VARIABLE MACRO=PAUSE_MMU VARIABLE=extruder_temp VALUE={printer.extruder.temperature}
 	SET_GCODE_VARIABLE MACRO=PAUSE_MMU VARIABLE=is_paused VALUE=1
@@ -211,6 +212,7 @@ gcode:
 # call this macro to correctly RESUME with MMU check
 [gcode_macro RESUME_MMU]
 gcode:
+        G90
 	{% if not printer.pause_resume.is_paused %}
 		RESPOND MSG="Print is not paused. Resume ignored"
 	{% else %}
@@ -218,7 +220,6 @@ gcode:
 			{% if printer["gcode_macro _VAR_MMU2S"].enable_sensor_before_gear or printer["filament_switch_sensor ir_sensor"].filament_detected %}
 				RESPOND MSG="Resume print ..."
 				RESTORE_GCODE_STATE NAME=PAUSE_MMU_state MOVE=1 MOVE_SPEED=100
-				G90
 				RESUME
 			{% else %}
 				RESPOND MSG="Filament not in extruder, could not resume"
