--- a/vking/printer-mmu2s-config.cfg
+++ b/vking/printer-mmu2s-config.cfg
@@ -30,7 +30,7 @@
 #
 ################################
 [gcode_macro _VAR_MMU2S]
-variable_tmc2209_sensorless: 1
+variable_tmc2209_sensorless: True
 variable_timeout_pause: 36000
 variable_disable_heater: 600
 variable_insert_into_mmu_length: 200
@@ -52,10 +52,20 @@ variable_pause_y_out: 20
 variable_pause_z: 10
 variable_min_temp_extruder: 180
 variable_extruder_eject_temp: 220
-variable_enable_5in1: 1
-variable_purge_after_load: 1
+variable_enable_5in1: True
+variable_enable_filametrix_cut: False
+variable_filametrix_pos_start: 110
+variable_filametrix_pos_cut: -1
+variable_filametrix_nb_cut: 1
+variable_filametrix_x_current: 1.5
+variable_filametrix_unload_length1: 35
+variable_filametrix_unload_length2: 55
+variable_enable_sensor_before_gear: True
+variable_purge_after_load: True
 variable_purge_speed: 200
-variable_enable_purge_servo: 0
+variable_purge_retract_at_end: 2
+variable_enable_purge_servo: False
+variable_servo_angle_deploy:150
 variable_t0_purge_load_length: 40
 variable_t0_purge_unload_length: 0
 variable_t1_purge_load_length: 40
@@ -66,8 +76,8 @@ variable_t3_purge_load_length: 40
 variable_t3_purge_unload_length: 0
 variable_t4_purge_load_length: 40
 variable_t4_purge_unload_length: 0
-variable_enable_length_sensor: 0
-variable_enable_debug: 0
+variable_enable_motion_sensor: True
+variable_enable_debug: False
 gcode:
 
 # MMU2S STANDARD
