--- a/blv/printer-mmu2s-length-sensors.cfg
+++ b/blv/printer-mmu2s-length-sensors.cfg
@@ -14,8 +14,8 @@ switch_pin: sensorboard:PA0
 #pause_on_runout:
 pause_on_runout: False
 runout_gcode:
-	M117 Runout Detected!
-	PAUSE_MMU
+	RESPONG MSG="Runout Detected!"
+	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_RUNOUT VARIABLE=is_runout VALUE=True
 #insert_gcode:
 #event_delay:
 #pause_delay:
@@ -34,8 +34,8 @@ switch_pin: sensorboard:PA1
 #pause_on_runout:
 pause_on_runout: False
 runout_gcode:
-	M117 Runout Detected!
-	PAUSE_MMU
+	RESPONG MSG="Runout Detected!"
+	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_RUNOUT VARIABLE=is_runout VALUE=True
 #insert_gcode:
 #event_delay:
 #pause_delay:
@@ -55,8 +55,8 @@ switch_pin: sensorboard:PA2
 #pause_on_runout:
 pause_on_runout: False
 runout_gcode:
-	M117 Runout Detected!
-	PAUSE_MMU
+	RESPONG MSG="Runout Detected!"
+	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_RUNOUT VARIABLE=is_runout VALUE=True
 #insert_gcode:
 #event_delay:
 #pause_delay:
@@ -75,8 +75,8 @@ switch_pin: sensorboard:PA3
 #pause_on_runout:
 pause_on_runout: False
 runout_gcode:
-	M117 Runout Detected!
-	PAUSE_MMU
+	RESPONG MSG="Runout Detected!"
+	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_RUNOUT VARIABLE=is_runout VALUE=True
 #insert_gcode:
 #event_delay:
 #pause_delay:
@@ -95,8 +95,8 @@ switch_pin: sensorboard:PA4
 #pause_on_runout:
 pause_on_runout: False
 runout_gcode:
-	M117 Runout Detected!
-	PAUSE_MMU
+	RESPONG MSG="Runout Detected!"
+	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_RUNOUT VARIABLE=is_runout VALUE=True
 #insert_gcode:
 #event_delay:
 #pause_delay:
