--- a/blv/stealthburner_leds.cfg
+++ b/blv/stealthburner_leds.cfg
@@ -1,4 +1,4 @@
-# Macros for setting the status leds on the Voron StealthBurner toolhead (or for any neopixel-type leds).
+# Macros for setting the _STATUS leds on the Voron StealthBurner toolhead (or for any neopixel-type leds).
 #
 # You will need to configure a neopixel (or other addressable led, such as dotstar). See
 # https://www.klipper3d.org/Config_Reference.html#neopixel for configuration details.
@@ -59,7 +59,7 @@ chain_count: 3
 #   The number of Neopixel chips that are "daisy chained" to the
 #   provided pin. The default is 1 (which indicates only a single
 #   Neopixel is connected to the pin).
-color_order: GRBW
+color_order: GRB
 #   Set the pixel order required by the LED hardware. Options are GRB,
 #   RGB, GRBW, or RGBW. The default is GRB.
 initial_RED: 0.0
@@ -77,7 +77,7 @@ initial_WHITE: 0.0
 # MACROS #
 ##########
 
-# The following status macros are available (these go inside of your macros):
+# The following _STATUS macros are available (these go inside of your macros):
 #
 #    STATUS_READY
 #    STATUS_OFF
@@ -99,7 +99,7 @@ initial_WHITE: 0.0
 
 
 [gcode_macro _sb_vars]
-# User settings for the StealthBurner status leds. You can change the status colors and led
+# User settings for the StealthBurner _STATUS leds. You can change the _STATUS colors and led
 # configurations for the logo and nozzle here.
 variable_colors: {
         'logo': { # Colors for logo states
@@ -188,67 +188,67 @@ gcode:
 
     _set_sb_leds led={led} red={red} green={green} blue={blue} white={white} idx="{idx}" transmit={transmit}
 
-[gcode_macro set_logo_leds_off]
+[gcode_macro _set_logo_leds_off]
 gcode:
     {% set transmit=params.TRANSMIT|default(1) %}
     _set_logo_leds red=0 blue=0 green=0 white=0 transmit={transmit}
 
-[gcode_macro set_nozzle_leds_on]
+[gcode_macro _set_nozzle_leds_on]
 gcode:
     {% set transmit=params.TRANSMIT|default(1) %}
     _set_sb_leds_by_name leds="nozzle" color="on" transmit={transmit}
 
-[gcode_macro set_nozzle_leds_off]
+[gcode_macro _set_nozzle_leds_off]
 gcode:
     {% set transmit=params.TRANSMIT|default(1) %}
     _set_sb_leds_by_name leds="nozzle" color="off" transmit={transmit}
 
-[gcode_macro status_off]
+[gcode_macro _STATUS_off]
 gcode:
-    set_logo_leds_off transmit=0
-    set_nozzle_leds_off
+    _set_logo_leds_off transmit=0
+    _set_nozzle_leds_off
 
-[gcode_macro status_ready]
+[gcode_macro _STATUS_ready]
 gcode:
     _set_sb_leds_by_name leds="logo" color="standby" transmit=0
     _set_sb_leds_by_name leds="nozzle" color="standby" transmit=1
 
-[gcode_macro status_busy]
+[gcode_macro _STATUS_busy]
 gcode:
     _set_sb_leds_by_name leds="logo" color="busy" transmit=0
-    set_nozzle_leds_on
+    _set_nozzle_leds_on
 
-[gcode_macro status_heating]
+[gcode_macro _STATUS_heating]
 gcode:
     _set_sb_leds_by_name leds="logo" color="heating" transmit=0
     _set_sb_leds_by_name leds="nozzle" color="heating" transmit=1
 
-[gcode_macro status_leveling]
+[gcode_macro _STATUS_leveling]
 gcode:
     _set_sb_leds_by_name leds="logo" color="leveling" transmit=0
-    set_nozzle_leds_on
+    _set_nozzle_leds_on
 
-[gcode_macro status_homing]
+[gcode_macro _STATUS_homing]
 gcode:
     _set_sb_leds_by_name leds="logo" color="homing" transmit=0
-    set_nozzle_leds_on
+    _set_nozzle_leds_on
 
-[gcode_macro status_cleaning]
+[gcode_macro _STATUS_cleaning]
 gcode:
     _set_sb_leds_by_name leds="logo" color="cleaning" transmit=0
-    set_nozzle_leds_on
+    _set_nozzle_leds_on
 
-[gcode_macro status_meshing]
+[gcode_macro _STATUS_meshing]
 gcode:
     _set_sb_leds_by_name leds="logo" color="meshing" transmit=0
-    set_nozzle_leds_on
+    _set_nozzle_leds_on
 
-[gcode_macro status_calibrating_z]
+[gcode_macro _STATUS_calibrating_z]
 gcode:
     _set_sb_leds_by_name leds="logo" color="calibrating_z" transmit=0
-    set_nozzle_leds_on
+    _set_nozzle_leds_on
 
-[gcode_macro status_printing]
+[gcode_macro _STATUS_printing]
 gcode:
     _set_sb_leds_by_name leds="logo" color="printing" transmit=0
-    set_nozzle_leds_on
+    _set_nozzle_leds_on
