--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -125,6 +125,9 @@ gcode:
 
 [gcode_macro _DEPLOY_TOUCHMI]
 gcode:
+    {% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
+        _STATUS_LEVELING   
+    {% endif %}
     {% if printer["gcode_macro _RETRACT_TOUCHMI"].touchmi_retracted|int == 1 %}
     SET_GCODE_VARIABLE MACRO=_RETRACT_TOUCHMI VARIABLE=touchmi_retracted VALUE=0
         {% if not 'xy' in printer.toolhead.homed_axes %}
@@ -151,6 +154,9 @@ gcode:
 [gcode_macro SCREWS_TILT_CALCULATE]
 rename_existing: BASE_SCREWS_TILT_CALCULATE
 gcode:
+    {% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
+        _STATUS_CALIBRATING_Z    
+    {% endif %}
     {% if not 'xyz' in printer.toolhead.homed_axes %}
     HOME_ALL
     {% endif %}
@@ -161,6 +167,9 @@ gcode:
 [gcode_macro _MZ_TILT_ADJUST]
 gcode:
     {% if printer["gcode_macro _VARS_PRINTER"].enable_z_tilt|int == 1 %}
+    {% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
+        _STATUS_CALIBRATING_Z    
+    {% endif %}
     {% if not 'xyz' in printer.toolhead.homed_axes %}
     HOME_ALL
     {% endif %}
@@ -172,6 +181,9 @@ gcode:
 [gcode_macro BED_MESH_CALIBRATE]
 rename_existing: BASE_MESH_CALIBRATE
 gcode: 
+    {% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
+        _STATUS_MESHING 
+    {% endif %}
     {% if not 'xyz' in printer.toolhead.homed_axes %}
     HOME_ALL
     {% endif %}
@@ -213,13 +225,23 @@ gcode:
 		_PARK_PURGE
 	{% endif %}
 
+[delayed_gcode _SB_LEDS_OFF]
+initial_duration: 0.1
+gcode:
+    {% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
+        _STATUS_OFF
+    {% endif %}
+
 [gcode_macro START_PRINT]
 gcode:
     {% set BED_TEMP = params.BED_TEMP|default(0)|float %}
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(0)|float %}
     {% set LOAD = params.LOAD|default(-1)|int %}
+    {% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
+        _STATUS_BUSY    
+    {% endif %}
     {% if printer["gcode_macro _VARS_PRINTER"].enable_servo|int ==1 %}
-    _PARK_PURGE
+        _PARK_PURGE
     {% endif %}
     # metric values
     G21
@@ -228,6 +250,9 @@ gcode:
     # set extruder to absolute mode
     M82
     # start with the fan off
+    {% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
+        _STATUS_HEATING    
+    {% endif %}
     M107
     # Start bed heating
     M140 S{BED_TEMP}
@@ -237,6 +262,9 @@ gcode:
     SET_GCODE_OFFSET Z=0.0
     # clear pause
     CLEAR_PAUSE
+    {% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
+        _STATUS_HOMING    
+    {% endif %}
     # Home the printer
     HOME_ALL
     # Load mesh
@@ -244,9 +272,17 @@ gcode:
     # Move the nozzle near the bed
     G1 Z15 F3000
     # Set and wait for nozzle to reach temperature
+    {% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
+        _STATUS_HEATING    
+    {% endif %}
     M109 S{EXTRUDER_TEMP}
     # Load filament into MMU
     {% if printer["gcode_macro _VARS_PRINTER"].enable_mmu|int == 1 %}
+        _RESET_MMU_ERROR
+        _MMU_WRITE_STAT MSG="STATUS:START:-1"
+    {% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
+        _STATUS_HOMING    
+    {% endif %}
     HOME_MMU
     M109 S{EXTRUDER_TEMP}
     _GO_TO_PARKING
@@ -287,6 +323,9 @@ gcode:
     G1 F9000
     M117 ->> Printing <--
     _bip
+    {% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
+        _STATUS_PRINTING    
+    {% endif %}
 
 [gcode_macro END_PRINT]
 gcode:
@@ -302,8 +341,8 @@ gcode:
     G1 Z+5 E-2 F9000 
     G90
     {% if printer["gcode_macro _VARS_PRINTER"].enable_mmu|int == 1 %}
-    M702
-    _GO_TO_PARKING_OUT
+       M702
+       _GO_TO_PARKING_OUT
     {% endif %}
     G90
     # the bed to move to the front
@@ -313,7 +352,14 @@ gcode:
     # extruder fan off
     M107
     _bip
-
+    {% if printer["gcode_macro _VARS_PRINTER"].enable_mmu|int == 1 %}
+       DISPLAY_MMU_ERROR
+    {% endif %}
+    {% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
+        _STATUS_READY    
+    {% endif %}
+    _MMU_WRITE_STAT MSG="STATUS:END:-1"
+    _MMU_GENERATE_STAT
 
 ########################
 #
@@ -330,6 +376,9 @@ gcode:
 [gcode_macro _clean]
 gcode:
     {% if printer["gcode_macro _VARS_PRINTER"].enable_clean_nozzle|int ==1 %}
+    {% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
+        _STATUS_CLEANING    
+    {% endif %}
     G90
     G1 Z10
     G1 X{printer["gcode_macro _VARS_PRINTER"].clean_x_pos|int} Y{printer["gcode_macro _VARS_PRINTER"].clean_y_pos|int} F3000
