--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -1,5 +1,7 @@
 ###########################################################################
 ###########################################################################
+[exclude_object]
+
 [menu __main __octoprint]
 type: disabled
 
@@ -326,6 +328,14 @@ gcode:
     {% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
         _STATUS_PRINTING    
     {% endif %}
+    _START_PRINT
+
+[gcode_macro _START_PRINT]
+gcode:
+    {% if printer["gcode_macro _VAR_MMU2S"].enable_filametrix_pause_at_start %}
+	RESPOND PREFIX=tgnotify MSG="Printer is paused, remove Filametrix before Homing"
+	PAUSE
+    {% endif %} 
 
 [gcode_macro END_PRINT]
 gcode:
