--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -41,34 +41,36 @@ gcode:
 gcode:
 	RESPOND MSG="Error status : "
 	RESPOND MSG="Error cut		: {printer["gcode_macro _MMU_ERROR_CUT"].error_cut}"
+	RESPOND MSG="Error purge	: {printer["gcode_macro _MMU_ERROR_PURGE"].error_purge}"
 	RESPOND MSG="Error load		: {printer["gcode_macro _MMU_ERROR_LOAD"].error_load}"
 	RESPOND MSG="Error unload	: {printer["gcode_macro _MMU_ERROR_UNLOAD"].error_unload}"
-	RESPOND MSG="Retry load		: {printer["gcode_macro _MMU_ERROR_INCREMENT_LOAD"].error_retry_load}"
-	RESPOND MSG="Retry unload	: {printer["gcode_macro _MMU_ERROR_INCREMENT_UNLOAD"].error_retry_unload}"
-	RESPOND MSG="Intervention	: {printer["gcode_macro _MMU_ERROR_INCREMENT_PAUSE"].error_retry_pause}"
+	RESPOND MSG="Retry load		: {printer["gcode_macro _MMU_ERROR_RETRY_LOAD"].error_retry_load}"
+	RESPOND MSG="Retry unload	: {printer["gcode_macro _MMU_ERROR_RETRY_UNLOAD"].error_retry_unload}"
+	RESPOND MSG="Intervention	: {printer["gcode_macro _MMU_ERROR_PAUSE"].error_retry_pause}"
 
 [gcode_macro _RESET_MMU_ERROR]
 gcode:
 	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_CUT VARIABLE=error_cut VALUE=0
+	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_PURGE VARIABLE=error_purge VALUE=0
 	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_LOAD VARIABLE=error_load VALUE=0
 	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_UNLOAD VARIABLE=error_unload VALUE=0
-	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_LOAD VARIABLE=error_retry_load VALUE=0
-	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_UNLOAD VARIABLE=error_retry_unload VALUE=0
-	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_PAUSE VARIABLE=error_retry_pause VALUE=0
+	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_RETRY_LOAD VARIABLE=error_retry_load VALUE=0
+	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_RETRY_UNLOAD VARIABLE=error_retry_unload VALUE=0
+	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_PAUSE VARIABLE=error_retry_pause VALUE=0
 	_MMU_WRITE_STAT MSG='RESET'	
 
-[gcode_macro _MMU_ERROR_INCREMENT_LOAD]
+[gcode_macro _MMU_ERROR_RETRY_LOAD]
 variable_error_retry_load: 0
 gcode:
 	{% set error = error_retry_load + 1 %}
-	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_LOAD VARIABLE=error_retry_load VALUE={error}
+	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_RETRY_LOAD VARIABLE=error_retry_load VALUE={error}
 	_MMU_WRITE_STAT MSG="ERROR:RLOAD:T{printer["gcode_macro SELECT_TOOL"].color_selected}"
 
-[gcode_macro _MMU_ERROR_INCREMENT_UNLOAD]
+[gcode_macro _MMU_ERROR_RETRY_UNLOAD]
 variable_error_retry_unload: 0
 gcode:
 	{% set error = error_retry_unload + 1 %}
-	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_UNLOAD VARIABLE=error_retry_unload VALUE={error}
+	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_RETRY_UNLOAD VARIABLE=error_retry_unload VALUE={error}
 	_MMU_WRITE_STAT MSG="ERROR:RULOAD:T{printer["gcode_macro SELECT_TOOL"].color_selected}"
 
 [gcode_macro _MMU_ERROR_CUT]
@@ -77,6 +79,13 @@ gcode:
         {% set error = error_cut + 1 %}
         SET_GCODE_VARIABLE MACRO=_MMU_ERROR_CUT VARIABLE=error_cut VALUE={error}
         _MMU_WRITE_STAT MSG="ERROR:CUT:T{printer["gcode_macro SELECT_TOOL"].color_selected}"
+
+[gcode_macro _MMU_ERROR_PURGE]
+variable_error_purge: 0
+gcode:
+        {% set error = error_purge + 1 %}
+        SET_GCODE_VARIABLE MACRO=_MMU_ERROR_PURGE VARIABLE=error_purge VALUE={error}
+        _MMU_WRITE_STAT MSG="ERROR:PURGE:T{printer["gcode_macro SELECT_TOOL"].color_selected}"
 
 [gcode_macro _MMU_ERROR_LOAD]
 variable_error_load: 0
@@ -92,11 +101,11 @@ gcode:
         SET_GCODE_VARIABLE MACRO=_MMU_ERROR_UNLOAD VARIABLE=error_unload VALUE={error}
         _MMU_WRITE_STAT MSG="ERROR:ULOAD:T{printer["gcode_macro SELECT_TOOL"].color_selected}"
 
-[gcode_macro _MMU_ERROR_INCREMENT_PAUSE]
+[gcode_macro _MMU_ERROR_PAUSE]
 variable_error_retry_pause: 0
 gcode:
 	{% set error = error_retry_pause + 1 %}
-	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_PAUSE VARIABLE=error_retry_pause VALUE={error}
+	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_PAUSE VARIABLE=error_retry_pause VALUE={error}
 	_MMU_WRITE_STAT MSG="ERROR:PAUSE:T{printer["gcode_macro SELECT_TOOL"].color_selected}"
 
 [gcode_macro _MMU_ERROR_INCREMENT_RUNOUT]
@@ -195,10 +204,10 @@ gcode:
 		 	( not printer["gcode_macro _VAR_MMU2S"].enable_sensor_after_gear or printer["filament_switch_sensor sensor_after_gear"].filament_detected )
 		)
 	%}
-		MMU_RESPOND MSG="Filament in"
+		#MMU_RESPOND MSG="Filament in"
 		SET_GCODE_VARIABLE MACRO=_EXTRUDER_IN_STATUS VARIABLE=filament_loaded VALUE=True
 	{% else %}
-		MMU_RESPOND MSG="Filament out"
+		#MMU_RESPOND MSG="Filament out"
 		SET_GCODE_VARIABLE MACRO=_EXTRUDER_IN_STATUS VARIABLE=filament_loaded VALUE=False
 	{% endif %}
 
@@ -291,12 +300,12 @@ gcode:
 	SAVE_GCODE_STATE NAME=PAUSE_MMU_state
 	SET_IDLE_TIMEOUT TIMEOUT={printer["gcode_macro _VAR_MMU2S"].timeout_pause}
 	UPDATE_DELAYED_GCODE ID=DISABLE_HEATER DURATION={printer["gcode_macro _VAR_MMU2S"].disable_heater}
-	_MMU_ERROR_INCREMENT_PAUSE
+	_MMU_ERROR_PAUSE
 	UNSELECT_TOOL
 	_bip
 	_bip
 	_bip
-	PAUSE
+	PAUSE_BASE
 	G91
 	G1 Z{printer["gcode_macro _VAR_MMU2S"].pause_z}
 	G90
@@ -331,7 +340,8 @@ gcode:
 				G92 E0
 				G90
 				RESTORE_GCODE_STATE NAME=PAUSE_MMU_state MOVE=1 MOVE_SPEED=100
-				RESUME
+				RESUME_BASE
+				SET_SELECTED_COLOR VALUE={printer["gcode_macro TX"].next_color}
 				_RESTORE_STATE_IF_SWAP_OK
 			{% else %}
 				RESPOND MSG="Filament not in extruder, could not resume"
@@ -353,17 +363,21 @@ gcode:
 
 [gcode_macro TX]
 variable_prev_pa = 0
+variable_old_color = -1
+variable_next_color = -1
 gcode:
 	{% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
 		_STATUS_BUSY    
 	{% endif %}
 	{% set EXTRUDER = params.EXTRUDER|default(0)|int %}
 	SET_DISPLAY_TEXT MSG="Change Tool T{EXTRUDER}"
+	SET_GCODE_VARIABLE MACRO=TX VARIABLE=old_color VALUE={next_color}
+	SET_GCODE_VARIABLE MACRO=TX VARIABLE=next_color VALUE={EXTRUDER}
 	RESPOND MSG="T{EXTRUDER} ..."
 	_MMU_WRITE_STAT MSG="TX:0:T{EXTRUDER}"
 	{% if printer["gcode_macro SELECT_TOOL"].color_selected|int != EXTRUDER %}
 		G91
-		G1 Z0.2
+		G1 Z{printer["gcode_macro _VAR_MMU2S"].lift_z_during_swap|float}
 		G90
 		SAVE_GCODE_STATE NAME=_MMU_TX
 		SET_GCODE_VARIABLE MACRO=TX VARIABLE=prev_pa VALUE={printer.extruder.pressure_advance}
@@ -396,12 +410,16 @@ gcode:
 [gcode_macro _RESTORE_STATE_IF_SWAP_OK]
 gcode:
 	{% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
+		{% if printer["gcode_macro _VAR_MMU2S"].enable_purge_servo %}
+			_RETRACT_PURGE
+		{% endif %}
 		MMU_RESPOND MSG="Restore state after swap"
 		SET_PRESSURE_ADVANCE ADVANCE={printer["gcode_macro TX"].prev_pa} # restore PA
-        	RESTORE_GCODE_STATE NAME=_MMU_TX MOVE_SPEED=250
+        	RESTORE_GCODE_STATE NAME=_MMU_TX MOVE=1 MOVE_SPEED=250
                 G91
-                G1 Z-0.2
+                G1 Z-{printer["gcode_macro _VAR_MMU2S"].lift_z_during_swap|float}
                 G90
+		G92 E0
 	{% else %}
 		MMU_RESPOND MSG="Could not restore state, swap failed ...."
 	{% endif %}
@@ -417,6 +435,7 @@ gcode:
 			_CHECK_PURGE
 		{% else %}
 			RESPOND MSG="Filament not loaded, could not PURGE :("
+			_MMU_ERROR_PURGE
 			PAUSE_MMU
 		{% endif %}
 	 {% endif %}
@@ -426,9 +445,9 @@ gcode:
 	{% if printer["gcode_macro _MMU_ERROR_INCREMENT_RUNOUT"].is_runout %}
 		RESPOND MSG="Runout detected :("
 		SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_RUNOUT VARIABLE=is_runout VALUE=False
+		_MMU_ERROR_PURGE
 		PAUSE_MMU
 	{% else %}
-		_RETRACT_PURGE
 		MMU_RESPOND MSG="Purge done :)"
 	{% endif %}
 
@@ -436,11 +455,11 @@ gcode:
 gcode:
 	{% set EXTRUDER = params.EXTRUDER|default(0)|int %}
 	{% if printer["gcode_macro _EXTRUDER_IN_STATUS"].filament_loaded %}
-		SET_DISPLAY_TEXT MSG="T{EXTRUDER} Loaded :)"
-		RESPOND MSG="T{EXTRUDER} Loaded :)"
+		SET_DISPLAY_TEXT MSG="T{printer["gcode_macro TX"].old_color}->T{EXTRUDER} Loaded :)"
+		RESPOND MSG="T{printer["gcode_macro TX"].old_color}->T{EXTRUDER} Loaded :)"
 	{% else %}
-		SET_DISPLAY_TEXT MSG="T{EXTRUDER} FAILED :("
-		RESPOND MSG="T{EXTRUDER} FAILED :("
+		SET_DISPLAY_TEXT MSG="T{printer["gcode_macro TX"].old_color}->T{EXTRUDER} FAILED :("
+		RESPOND MSG="T{printer["gcode_macro TX"].old_color}->T{EXTRUDER} FAILED :("
 	{% endif %}
 
 [gcode_macro T0]
@@ -553,7 +572,6 @@ gcode:
 [gcode_macro SELECT_TOOL]
 variable_tool_selected: -1
 variable_color_selected: -1
-variable_old_color_selected: -1
 gcode:
 	{% if printer["gcode_macro HOME_MMU"].home != -1 %}
 		MMU_RESPOND MSG="Select Tool {params.VALUE} ..."
@@ -562,12 +580,15 @@ gcode:
 			_MMU_MANUAL_STEPPER STEPPER=selector_stepper MOVE={printer["gcode_macro _VAR_MMU2S"].colorselector[params.VALUE|int]}
 		{% endif %}
 		SET_GCODE_VARIABLE MACRO=SELECT_TOOL VARIABLE=tool_selected VALUE={params.VALUE}
-		SET_GCODE_VARIABLE MACRO=SELECT_TOOL VARIABLE=old_color_selected VALUE={color_selected}
-		SET_GCODE_VARIABLE MACRO=SELECT_TOOL VARIABLE=color_selected VALUE={params.VALUE}
+		SET_SELECTED_COLOR VALUE={params.VALUE}
 		MMU_RESPOND MSG="Tool {params.VALUE} Enabled"
 	{% else %}
 	RESPOND MSG="Could not select tool, MMU is not homed"
 	{% endif %}
+
+[gcode_macro SET_SELECTED_COLOR]
+gcode:
+	SET_GCODE_VARIABLE MACRO=SELECT_TOOL VARIABLE=color_selected VALUE={params.VALUE}
 
 # Unselect a tool, only park the idler
 [gcode_macro UNSELECT_TOOL]
@@ -652,26 +673,26 @@ gcode:
 	{% if printer["gcode_macro _VAR_MMU2S"].purge_after_load %}
 	{% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
 	{% if printer.extruder.temperature > printer["gcode_macro _VAR_MMU2S"].min_temp_extruder %}
-		MMU_RESPOND MSG="Purging Filament..."
-		{% set purge_length=0 %}
+		MMU_RESPOND MSG="Purging Filament {printer["gcode_macro TX"].old_color}->{printer["gcode_macro SELECT_TOOL"].color_selected}..."
+		{% set purge_length = 0 %}
 		G91
 		G92 E0
 		G1 E2.0000 F1140
 		G1 E7.0000 F1680
 		G1 E1.0000 F168
-		{% if printer["gcode_macro SELECT_TOOL"].old_color_selected|int == 0 %}
+		{% if printer["gcode_macro TX"].old_color|int == 0 %}
 			{% set purge_length = printer["gcode_macro _VAR_MMU2S"].t0_purge_unload_length %}
 		{% endif %}
-		{% if printer["gcode_macro SELECT_TOOL"].old_color_selected|int == 1 %}
+		{% if printer["gcode_macro TX"].old_color|int == 1 %}
 			{% set purge_length = printer["gcode_macro _VAR_MMU2S"].t1_purge_unload_length %}
 		{% endif %}
-		{% if printer["gcode_macro SELECT_TOOL"].old_color_selected|int == 2 %}
+		{% if printer["gcode_macro TX"].old_color|int == 2 %}
 			{% set purge_length = printer["gcode_macro _VAR_MMU2S"].t2_purge_unload_length %}
 		{% endif %}
-		{% if printer["gcode_macro SELECT_TOOL"].old_color_selected|int == 3 %}
+		{% if printer["gcode_macro TX"].old_color|int == 3 %}
 			{% set purge_length = printer["gcode_macro _VAR_MMU2S"].t3_purge_unload_length %}
 		{% endif %}
-		{% if printer["gcode_macro SELECT_TOOL"].old_color_selected|int == 4 %}
+		{% if printer["gcode_macro TX"].old_color|int == 4 %}
 			{% set purge_length = printer["gcode_macro _VAR_MMU2S"].t4_purge_unload_length %}
 		{% endif %}
 		{% if printer["gcode_macro SELECT_TOOL"].color_selected|int == 0 %}
@@ -783,7 +804,7 @@ gcode:
 		{% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
 		{% if printer.extruder.temperature > printer["gcode_macro _VAR_MMU2S"].min_temp_extruder %}
 			MMU_RESPOND MSG="Loading Filament..."
-			_MMU_ERROR_INCREMENT_LOAD
+			_MMU_ERROR_RETRY_LOAD
 			G90
 			_GO_TO_PARKING
 			__MOVE_IN_EXTRUDER LENGTH={printer["gcode_macro _VAR_MMU2S"].load_in_extruder} SPEED=10
@@ -824,6 +845,7 @@ gcode:
 		_IS_FILAMENT_IN_EXTRUDER
 	{% else %}
 		RESPOND MSG="Extruder too cold"
+		_MMU_ERROR_LOAD
 		PAUSE_MMU
 	{% endif %}
 
@@ -845,7 +867,7 @@ gcode:
 		{% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
 		{% if printer.extruder.temperature > printer["gcode_macro _VAR_MMU2S"].min_temp_extruder %}
 			MMU_RESPOND MSG="Unloading Filament extruder ..."
-			_MMU_ERROR_INCREMENT_UNLOAD
+			_MMU_ERROR_RETRY_UNLOAD
 			__MOVE_IN_EXTRUDER LENGTH=10 SPEED=10
 			__MOVE_IN_EXTRUDER LENGTH=-{printer["gcode_macro _VAR_MMU2S"].unload_in_extruder1} SPEED=10
 			__MOVE_IN_EXTRUDER LENGTH=-{printer["gcode_macro _VAR_MMU2S"].unload_in_extruder2} SPEED=50
@@ -865,15 +887,15 @@ gcode:
 		{% if printer["gcode_macro _VAR_MMU2S"].enable_filametrix_cut %}
 			_FILAMETRIX_CUT_FILAMENT
 		{% endif %}
-		        __MOVE_IN_EXTRUDER LENGTH=-{printer["gcode_macro _VAR_MMU2S"].unload_in_extruder1} SPEED=10
-                        __MOVE_IN_EXTRUDER LENGTH=-{printer["gcode_macro _VAR_MMU2S"].unload_in_extruder2} SPEED=50
+		__MOVE_IN_EXTRUDER LENGTH=-{printer["gcode_macro _VAR_MMU2S"].unload_in_extruder1} SPEED=10
+                __MOVE_IN_EXTRUDER LENGTH=-{printer["gcode_macro _VAR_MMU2S"].unload_in_extruder2} SPEED=50
 		{% if printer["gcode_macro _VAR_MMU2S"].enable_sensor_on_gear %}
 			_RETRY_UNLOAD_FILAMENT_IN_EXTRUDER_SENSOR_ON_GEAR
 		{% endif %}
 		_IS_FILAMENT_STUCK_IN_EXTRUDER
 	{% else %}
 		RESPOND MSG="Extruder too cold"
-		_MMU_ERROR_CUT
+		_MMU_ERROR_UNLOAD
 		PAUSE_MMU
 	{% endif %}
 
@@ -898,11 +920,24 @@ gcode:
 [gcode_macro _IS_FILAMETRIX_CUT_FILAMENT]
 gcode:
 	{% if printer["filament_switch_sensor sensor_after_gear"].filament_detected %}
-		RESPOND MSG="Filament not cut ... :("
-		PAUSE_MMU
+		RESPOND MSG="Filament not cut ... , maybe sensor error, test again"
+		__MOVE_IN_EXTRUDER LENGTH={printer["gcode_macro _VAR_MMU2S"].filametrix_unload_length2} SPEED=50
+		__MOVE_IN_EXTRUDER LENGTH=-{printer["gcode_macro _VAR_MMU2S"].filametrix_unload_length2} SPEED=50
+		_RETRY_IS_FILAMETRIX_CUT_FILAMENT
 	{% else %}
 		MMU_RESPOND MSG="Filament cut ok"
 	{% endif %}
+
+[gcode_macro _RETRY_IS_FILAMETRIX_CUT_FILAMENT]
+gcode:
+	{% if printer["filament_switch_sensor sensor_after_gear"].filament_detected %}
+                RESPOND MSG="Filament not cut ... :("
+                _MMU_ERROR_CUT
+                _EXTRUDER_STATUS
+                PAUSE_MMU
+        {% else %}
+                MMU_RESPOND MSG="Filament cut ok"
+        {% endif %}
 
 [gcode_macro __FILAMETRIX_CUT_FILAMENT]
 gcode:
@@ -973,10 +1008,12 @@ gcode:
 				MMU_RESPOND MSG="Filament rammed and removed"
 			{% else %}
 				RESPOND MSG="Tool selected, UNSELECT it"
+				_MMU_ERROR_UNLOAD
 				PAUSE_MMU
 			{% endif %}
 		{% else %}
 			RESPOND MSG="Extruder too cold"
+			_MMU_ERROR_UNLOAD
 			PAUSE_MMU
 		{% endif %}
 	{% endif %}
@@ -1073,7 +1110,7 @@ gcode:
 			{% else %}
 				 __MOVE_IN_EXTRUDER LENGTH=-{printer["gcode_macro _VAR_MMU2S"].bowden_unload_length} SPEED=20
 			{% endif %}
-			MMU_RESPOND MSG="Unloading done from PARKPOS to extruder"
+			MMU_RESPOND MSG="Unloading done from extruder to PARKPOS"
 		{% else %}
 			RESPOND MSG="Cannot unload from extruder to PARKPOS, tool not selected !!"
 		{% endif %}
@@ -1320,7 +1357,11 @@ gcode:
 			MMU_RESPOND MSG="Filament already ejected !"
 		{% endif %}
 	{% else %}
-		MMU_RESPOND MSG="No filament sensor, could not check if Filament is ejected !"
+		{% if printer["gcode_macro _VAR_MMU2S"].enable_sensor_any %}
+			MMU_RESPOND MSG="No filament sensor, could not check if Filament is ejected !"
+		{% else %}
+			MMU_RESPOND MSG="Filament already ejected !"
+		{% endif %}
 	{% endif %}
 
 ############################################
@@ -1465,7 +1506,7 @@ gcode:
 		MMU_RESPOND MSG="Retry loading ...."
 		{% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
 			MMU_RESPOND MSG="Loading Filament..."
-			_MMU_ERROR_INCREMENT_LOAD
+			_MMU_ERROR_RETRY_LOAD
 			G91
 			SELECT_TOOL VALUE={printer["gcode_macro SELECT_TOOL"].color_selected|int}
 			_MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=10 SPEED=10 SET_POSITION=0 SYNC=0
